--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} | {{ page.page_name | capitalize }}</title>
 
     <style type="text/css">
-
+        {% include critical.css %}
     </style>
 
 
