--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,16 +3,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl }}">
+    <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
 
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}"/>
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} | {{ page.page_name | capitalize }}</title>
 
     <style type="text/css">
-        {% include critical.css %}
+        {% if site.env == "production" %}
+            {% include critical.css %}
+        {% endif %}
     </style>
-
 
     <noscript id="dummy-stylesheet">
         <!-- Dummy -->
