--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,4 +39,7 @@
         <small>&copy; Stephen Asamoah — 2017 </small>
     </div>
 </footer>
-{% include scripts/google/pagespeed-defer.js %}
+
+<script>
+    {% include scripts/google/pagespeed-defer.js %}
+</script>
