--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,6 +40,12 @@
     </div>
 </footer>
 
-<script>
+<!-- Dummy Stylesheet Script -->
+<script type="text/javascript">
     {% include scripts/google/pagespeed-defer.js %}
+</script>
+
+<!-- Webfont Config -->
+<script type="text/javascript">
+    {% include webfontLoader/webfontloader.js %}
 </script>
