--- a/_includes/project.html
+++ b/_includes/project.html
@@ -7,6 +7,6 @@
         </figure>
     </a>
     {% if project.description %}
-        <span class="light grey">{{ project.description }}</span>
+        <span class="grey">{{ project.description }}</span>
     {% endif %}
 </li>
