#HTML and CSS Fixes - Removed dummy stylesheet from HTML. No longer relevant for Pagespeed compensation. - Removed excess padding from contact heading. - Added README - Added generated CSS to source directory
#HTML5 Outliner
Fixed page outline using HTML5 Outliner Guide
    * Affected pages:
        - header.html
        - footer.html

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <hr class="hr--heavy">
 <footer class="center footer">
-    <div class="grid">
+    <section class="grid">
+        <h2 class="visually-hidden">Footer: Social Media Icons & Links</h2>
         <ul class="footer__list panel__social">
             <!-- Twitter -->
             <li class="footer__list--item">
@@ -37,13 +38,8 @@
         </ul>
 
         <small>&copy; Stephen Asamoah — 2017 </small>
-    </div>
+    </section>
 </footer>
-
-<!-- Dummy Stylesheet Script -->
-<script type="text/javascript">
-    {% include scripts/google/pagespeed-defer.js %}
-</script>
 
 <!-- Webfont Config -->
 <script type="text/javascript">
