--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,12 @@
 <header class="header">
+    <!-- For Screen Readers -->
+    <h1 class="visually-hidden">
+        <a href="{{ site.baseurl }}/"  title="WebCollective Website">WebCollective Logo</a>
+    </h1>
     <div class="grid">
         <nav class="nav">
+            <h2 class="visually-hidden">Main Navigation</h2>
+
             <a href="{{ site.baseurl }}/" class="logo logo--mini">
                 <svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
                     <path class="st0" d="M30.8 101.3l-18.7-75h20.5l6.8 34.1c0 3.4 1.7 6.8 1.7 10.2s1.7 6.8 1.7 11.9c0-3.4 1.7-6.8 1.7-11.9 0-3.4 1.7-6.8 1.7-10.2l8.5-34.1h18.7l8.5 34.1c1.7 3.4 1.7 6.8 1.7 10.2s1.7 6.8 1.7 11.9c0-3.4 1.7-6.8 1.7-11.9s1.7-6.8 1.7-10.2l6.8-34.1H116l-18.7 75H71.7l-6.8-29c0-3.4-1.7-6.8-1.7-10.2 0-3.4-1.7-6.8-1.7-11.9 0 3.4-1.7 8.5-1.7 11.9s-1.7 6.8-1.7 10.2l-3.4 29H30.8zM123.8 26.3h2.2l-18.7 75h-3.5zM24.3 101.3h-3.4l-18.8-75h2.2z"/>
