#HTML and CSS Fixes - Removed dummy stylesheet from HTML. No longer relevant for Pagespeed compensation. - Removed excess padding from contact heading. - Added README - Added generated CSS to source directory
#HTML5 Outliner
Fixed page outline using HTML5 Outliner Guide
    * Affected pages:
        - header.html
        - footer.html

--- a/_assets/scss/utilities/_helpers.scss
+++ b/_assets/scss/utilities/_helpers.scss
@@ -62,6 +62,10 @@
   font-weight: $font-weight-bold;
 }
 
+.visually-hidden {
+  @extend %srt;
+}
+
 %flex-sb {
   display: flex;
   justify-content: space-between;
