--- a/_includes/project.html
+++ b/_includes/project.html
@@ -1,7 +1,7 @@
 <li class="project--item">
     <a href="{{ project.link }}" target="_blank">
         <figure class="project--preview">
-            <img src="{{ site.baseurl }}/{{ project.preview_image | prepend: site.image_path}}.jpg"
+            <img src="{{ site.baseurl }}/{{ project.preview_image | prepend: site.image_path}}.png"
                  alt="Preview of {{ project.name }}" class="img">
             <figcaption><h3>{{ project.title }}</h3></figcaption>
         </figure>
