#CSS Optimizations   - Improved appearance of inline links   - Removed minima theme from _config.yml (Reason: was creating duplicate css <main.css> in destination dir   - Removed <clean> task from build-sequence (Reason: was causing delay in <imagemin> task) pathspec 'images/portfolio/project-asawa.jpg' did not match any file(s) known to git.

--- a/_assets/scss/modules/_nav.scss
+++ b/_assets/scss/modules/_nav.scss
@@ -36,6 +36,7 @@
     a {
       color: $white;
       padding-bottom: .3rem;
+      transition-property: border-bottom-color;
 
       &:hover {
         border-bottom: 2px solid $white;
