--- a/_assets/scss/utilities/_config.scss
+++ b/_assets/scss/utilities/_config.scss
@@ -35,6 +35,7 @@ $grey: #8a8c8e;
 // Brand Colors
 $color-primary: #1D313F;
 $color-secondary: #869544;
+$color-secondary-dark: #525C29;
 $color-accent: #ff430f;
 $color-accent-dark: #e1380f;
 
