# Major Fix for Critical Generation   SVG references above-the-fold culprit for neglected classes in HTML. Explicitly appending height=auto to svg options  fixed it. Note: triggers console errors.
# Other  changes for CSS
  - Set minify to false for Autoprefixr option in pleeease => cssnano does minification
  - CSS files in generated directory no longer minified for readability and bug fixing purposes.
  - Removed critical-this leftover code from uncss task
  - Changed critical path to _assets directory => is now staging file for concat-group options in critical task
  - Removed leftover psi option in paths.js file
  - Updated cleanPath

 # Misc
  - Created git sub-module under _assets for local asset management
  - Updated PNG images under _assets
  - Optimized Gulp tasks

--- a/_assets/scss/modules/_components.scss
+++ b/_assets/scss/modules/_components.scss
@@ -26,17 +26,21 @@
 
   // Desktop Logo
   @include m(mega) {
-
     display: none;
 
-    path {
-      fill: $color-accent;
-    }
 
     @include media-q('medium') {
       display: block;
       width: 25%;
       max-width: 20rem;
+
+      svg {
+        width: 100%;
+
+        path {
+          fill: $color-accent;
+        }
+      }
     }
   }
 
@@ -47,8 +51,12 @@
     width: 15%;
     max-width: 4rem;
 
-    path {
-      fill: $white;
+    svg {
+      width: 100%;
+
+      path {
+        fill: $white;
+      }
     }
 
     @include media-q('medium') {
