--- a/_assets/scss/base/_base.scss
+++ b/_assets/scss/base/_base.scss
@@ -14,6 +14,7 @@ html {
   box-sizing: border-box;
 }
 
+
 body {
   background-color: $white;
   color: $black;
@@ -117,6 +118,6 @@ textarea::placeholder {
 }
 
 ::selection {
-  background: $color-secondary;
-  color: $white;
+  background: palette(grey, 'light');
+  color: initial;
 }
