IE fixes for logo-in-nav and footer on shorter pages
Created faux-fixes for IE11 due to flexbox properties getting poorly handled. Death to IE!.

--- a/_assets/scss/base/_ie8.scss
+++ b/_assets/scss/base/_ie8.scss
@@ -1,3 +1,25 @@
 // ==========================================================================
 // #For IE8 Styles
 // ==========================================================================
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+
+  // Faux-fix for ultra-large logo height
+  .logo--mega,
+  .logo--mini {
+    height: 4vh;
+  }
+
+  // Faux-fix for hanging footer
+  .short-page {
+    .hr--heavy {
+      position: relative;
+      top: 80vh;
+    }
+
+    .footer {
+      position: absolute;
+      top: 95vh;
+      width: 100%;
+    }
+  }
+}
